# quill

examples/: CMakeLists.txt
examples/libexample/: CMakeLists.txt  main.cpp
examples/libexample/libfoo/: CMakeLists.txt  foo.cpp  foo.h
examples/recommended_usage/: CMakeLists.txt  recommended_usage.cpp
examples/recommended_usage/libfoo/: CMakeLists.txt  foo.cpp  foo.h
examples/recommended_usage/quill_static_lib/: overwrite_macros.h
